# SimulinkCodeEmbedInLinux

./: .gitignore  CMakeLists.txt  Readme.md
models/demo/: CodeGenerateTest.slx
src/: test.c
